# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp  camera.h  color.h  context.h  hitable.h  hittable.h  hittable_list.h  material.h  ppm.cpp  ppm.h  props.h  ray.h  render.h  sphere.h  utils.h  vec3.h  world.h
